fix folder spacing

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ section {
 }
 
 #folders {
-	width: 60%;
+	width: 400px;
 }
 
 .webapp-icon {
